Models variable refactor

--- a/src/components/dispatcher/static/dashboard/index.html
+++ b/src/components/dispatcher/static/dashboard/index.html
@@ -24,8 +24,8 @@
 <div class="container">
     <div class="row">
         <div class="col-12">
-            <div class="h3 mt-4">Models</div>
-            <table id="table-models"></table>
+            <div class="h3 mt-4">Containers</div>
+            <table id="table-containers"></table>
 
             <div class="h3 mt-4">Metrics</div>
             <table id="table-metrics" data-auto-refresh="true" data-auto-refresh-interval="1"></table>
