Added random and longest queue policies

--- a/components/dashboard/static/dashboard/index.html
+++ b/components/dashboard/static/dashboard/index.html
@@ -34,6 +34,7 @@
             <table id="table-metrics" data-auto-refresh="true" data-auto-refresh-interval="1"></table>
 
             <div class="h3 mt-4">Requests</div>
+            <button type="button" onclick="resetRequestsStore()" class="btn btn-danger">Reset</button>
             <table id="table-requests"></table>
         </div>
     </div>
