Pb models for tests

--- a/components/dashboard/static/dashboard/index.html
+++ b/components/dashboard/static/dashboard/index.html
@@ -36,6 +36,9 @@
             <div class="h3 mt-4">Requests</div>
             <button type="button" onclick="resetRequestsStore()" class="btn btn-danger">Reset</button>
             <table id="table-requests"></table>
+
+            <div class="h3 mt-4">Graph</div>
+            <canvas id="graph"></canvas>
         </div>
     </div>
 </div>
@@ -52,6 +55,7 @@
 <script
         src="https://unpkg.com/bootstrap-table@1.15.3/dist/extensions/auto-refresh/bootstrap-table-auto-refresh.min.js">
 </script>
+<script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
 <script src="main.js"></script>
 </body>
 
