Added containers metrics view

--- a/components/dashboard/static/dashboard/index.html
+++ b/components/dashboard/static/dashboard/index.html
@@ -31,14 +31,19 @@
             <table id="table-containers"></table>
 
             <div class="h3 mt-4">Metrics</div>
-            <table id="table-metrics" data-auto-refresh="true" data-auto-refresh-interval="1"></table>
+            <h6>Models</h6>
+            <table id="table-metrics-model" data-auto-refresh="true" data-auto-refresh-interval="1"></table>
+            <hr/>
+            <h6>Containers</h6>
+            <table id="table-metrics-container" data-auto-refresh="true" data-auto-refresh-interval="1"></table>
 
             <div class="h3 mt-4">Requests</div>
             <button type="button" onclick="resetRequestsStore()" class="btn btn-danger">Reset</button>
             <table id="table-requests"></table>
 
+            <!--
             <div class="h3 mt-4">Graph</div>
-            <canvas id="graph"></canvas>
+            <canvas id="graph"></canvas>-->
         </div>
     </div>
 </div>
