Added controller logs

--- a/components/dashboard/static/dashboard/index.html
+++ b/components/dashboard/static/dashboard/index.html
@@ -41,6 +41,9 @@
             <button type="button" onclick="resetRequestsStore()" class="btn btn-danger">Reset</button>
             <table id="table-requests"></table>
 
+            <div class="h3 mt-4">Controller</div>
+            <table id="table-controller-log"></table>
+
             <!--
             <div class="h3 mt-4">Graph</div>
             <canvas id="graph"></canvas>-->
