Added charts for rt and queue lengths

--- a/components/dashboard/static/dashboard/index.html
+++ b/components/dashboard/static/dashboard/index.html
@@ -44,9 +44,9 @@
             <div class="h3 mt-4">Controller</div>
             <table id="table-controller-log"></table>
 
-            <!--
-            <div class="h3 mt-4">Graph</div>
-            <canvas id="graph"></canvas>-->
+            <div class="h3 mt-4">Charts</div>
+            <canvas id="chart-rt" height="50"></canvas>
+            <canvas id="chart-ql" height="50"></canvas>
         </div>
     </div>
 </div>
