Added quota chart
Signed-off-by: Nicholas Rasi <nicholas.rasi@gmail.com>

--- a/components/dashboard/static/dashboard/index.html
+++ b/components/dashboard/static/dashboard/index.html
@@ -47,6 +47,7 @@
             <div class="h3 mt-4">Charts</div>
             <canvas id="chart-rt" height="50"></canvas>
             <canvas id="chart-ql" height="50"></canvas>
+            <canvas id="chart-quota" height="50"></canvas>
         </div>
     </div>
 </div>
